changed the package identification/comparison system to instead work off of the ID's of packages on wp, instead of package names
this is because two packages can share the same name on wp

--- a/sample-config.ini
+++ b/sample-config.ini
@@ -21,7 +21,7 @@ users[] = "testUser"
 ; LIST OF PACKAGES CONFIGURED ON WP
 ; used to synchronise packages between wp and vesta
 ;
-; key is package name on wordpress
-; value is package name on vesta
+; the key is the id of the package in the wp database
+; the value is the name of the package to implement on vesta for that id
 [packages]
 test package = "TestPackage"
