corrected package example

--- a/sample-config.ini
+++ b/sample-config.ini
@@ -24,4 +24,4 @@ users[] = "testUser"
 ; the key is the id of the package in the wp database
 ; the value is the name of the package to implement on vesta for that id
 [packages]
-test package = "TestPackage"
+1234 = "TestPackage"
