--- a/sample-config.ini
+++ b/sample-config.ini
@@ -8,9 +8,9 @@ db_password = "test_db_password"
 ; VESTA API CONFIG
 ; configure correct credentials below
 [vst]
-vst_hostname = "localhost";
+vst_hostname = "www.example.com/URL/to/API/Path";
 vst_username = "admin";
-vst_password = "test_vesta_password";
+vst_password = "vesta_password";
 
 ; VESTA USER WHITELIST
 ; all users added below will be ignored
