--- a/sample-config.ini
+++ b/sample-config.ini
@@ -8,7 +8,7 @@ db_password = "test_db_password"
 ; VESTA API CONFIG
 ; configure correct credentials below
 [vst]
-vst_hostname = "www.example.com/URL/to/API/Path";
+vst_hostname = "www.example.com";
 vst_username = "admin";
 vst_password = "vesta_password";
 
