--- a/sample-config.ini
+++ b/sample-config.ini
@@ -14,14 +14,14 @@ vst_password = "vesta_password";
 
 ; VESTA USER WHITELIST
 ; all users added below will be ignored
-; and won't be affected by the synch
+; and won't be affected by the sync
 [user_whitelist]
-users[] = "testUser"
+users[] = "exampleUser"
 
 ; LIST OF PACKAGES CONFIGURED ON WP
-; used to synchronise packages between wp and vesta
+; used to synchronize packages between WP and Vesta
 ;
-; the key is the id of the package in the wp database
-; the value is the name of the package to implement on vesta for that id
+; the key is the id of the package in the WP database
+; the value is the name of the package to implement on Vesta for that id
 [packages]
-1234 = "TestPackage"
+1234 = "PackageOnVesta"
