added sample smtp mailer settings to the sample-config.ini file

--- a/sample-config.ini
+++ b/sample-config.ini
@@ -25,3 +25,16 @@ users[] = "exampleUser"
 ; the value is the name of the package to implement on Vesta for that id
 [packages]
 1234 = "PackageOnVesta"
+
+; MAILER DETAILS
+; the following smtp settings are used to create the smtp mailer
+; which sends out notifications to users and admins
+[mailer]
+smtp_host = "examplehost@example.com"
+smtp_username = "exampleusername"
+smtp_password = "examplepassword"
+smtp_port = 123
+from_address = "donotreply@example.com"
+; add all admin addresses to be notified of status changes to array below
+admin_addresses[] = "test1@example.com"
+admin_addresses[] = "test2@example.com"
